# flutter-sec-audit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.py
examples/: .gitkeep
fluttersec/: __init__.py  cli.py  models.py
fluttersec/analyzers/: __init__.py  attack_simulator.py  security_scorer.py
fluttersec/extractors/: __init__.py  apk.py  ipa.py
fluttersec/reporters/: __init__.py  html_reporter.py  json_reporter.py  markdown_reporter.py
fluttersec/scanners/: __init__.py  asset_scanner.py  env_scanner.py  string_scanner.py
